[workspace]
members = [".", "stackable_derive"]

[package]
name = "minimum_ml"
version = "0.1.1"
edition = "2024"
license = "MIT"
authors = ["aokyut <epaperamic@gmail.com>"]
description = "Experimental Machine Learning Library"
repository = "https://github.com/aokyut/minimum_ml"
homepage = "https://github.com/aokyut/minimum_ml"
documentation = "https://docs.rs/minimum_ml"

[features]
default = []
# serde/serde_json/anyhow removed - using custom binary serialization
# indicatif removed - using simple console progress
# rand_distr removed - using Box-Muller implementation
logging = ["dep:tensorboard-rs", "dep:chrono"]
full = ["logging"]

[dependencies]
# Core dependencies only
rand = "0.9.2"
stackable_derive = { version = "0.1.0", path = "./stackable_derive" }

# Optional dependencies
tensorboard-rs = { version = "0.5", default-features = false, optional = true }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"], optional = true }
