[package]
name = "stackable_derive"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["aokyut <epaperamic@gmail.com>"]
description = "Process Macro For Experimental Machine Learning Library"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.114", features = ["full"] }
quote = "1.0.44"
proc-macro2 = "1.0.106"
